--- a/pubg.html
+++ b/pubg.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
-
  --><link rel="stylesheet" href="pubg.css"><meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ankush PuBg</title>
@@ -19,7 +18,7 @@
 <div class="formstyle" id="container" >
   <form action="" name="forms" id="calculator">
     <h4>By @nkush</h4>
-    <input type="text" name="answer" id="myinput" disabled><br>
+    <input type="text" name="answer" id="myinput" disabled> <input type="reset" value="C" onclick="forms.answer.value += ''"id="button"><br>
     <input type="button" value="7" onclick="forms.answer.value += '7'" id="button">
     <input type="button" value="8" onclick="forms.answer.value += '8'"id="button">
     <input type="button" value="9" onclick="forms.answer.value += '9'"id="button">
@@ -44,7 +43,7 @@
     <input type="button" value="/" onclick="forms.answer.value += '/'"id="button">
     
     <input type="button" value="=" onclick="forms.answer.value  = eval (forms.answer.value )"id="button">
-      <input type="button" onclick="document.getElemenyById('myinput').value ="C">
+     
   </form>
 </div>
 </body>
